<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:background="@color/cardview_light_background"
    tools:context=".MainActivity"
    style="@style/MyCoolStyle">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        android:text="@string/key_1"
        android:textSize="@dimen/txt_size"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/MyCoolButtonStyle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        android:text="@string/key_2"
        app:layout_constraintBottom_toTopOf="@id/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        android:text="@string/key_3"
        app:layout_constraintBottom_toTopOf="@id/key_division"
        app:layout_constraintEnd_toStartOf="@id/key_composition"
        app:layout_constraintStart_toEndOf="@id/key_2"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_composition"
        android:text="@string/key_composition"
        app:layout_constraintBottom_toTopOf="@id/key_equally"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        android:text="@string/key_4"
        app:layout_constraintBottom_toTopOf="@id/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        android:text="@string/key_5"
        app:layout_constraintBottom_toTopOf="@id/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_6"
        android:text="@string/key_6"
        app:layout_constraintBottom_toTopOf="@id/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_subtraction"
        app:layout_constraintStart_toEndOf="@id/key_5"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_subtraction"
        android:text="@string/key_subtraction"
        app:layout_constraintBottom_toTopOf="@id/key_composition"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        android:text="@string/key_7"
        app:layout_constraintBottom_toTopOf="@id/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        android:text="@string/key_8"
        app:layout_constraintBottom_toTopOf="@id/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        android:text="@string/key_9"
        app:layout_constraintBottom_toTopOf="@id/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_addition"
        app:layout_constraintStart_toEndOf="@id/key_8"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_addition"
        android:text="@string/key_addition"
        app:layout_constraintBottom_toTopOf="@id/key_subtraction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9"
        style="@style/MyCoolButtonStyle"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        android:text="@string/key_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_dot"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        android:text="@string/key_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_division"
        app:layout_constraintStart_toEndOf="@id/key_0"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_division"
        android:text="@string/division"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/key_equally"
        app:layout_constraintStart_toEndOf="@id/key_dot"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_equally"
        android:text="@string/key_equally"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_division"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_clear"
        android:text="@string/key_clear"
        app:layout_constraintBottom_toTopOf="@id/key_addition"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/MyCoolButtonStyle"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/key_result"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_btn"
        app:layout_constraintBottom_toTopOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_clear"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>